<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:src="@drawable/battery_drawer_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_24"
        android:background="@color/line_color"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        app:layout_constraintEnd_toStartOf="@+id/g2"
        app:layout_constraintStart_toStartOf="@+id/g3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/large_margin"
        android:src="@drawable/voltage"
        app:layout_constraintEnd_toStartOf="@+id/g2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/txt_app_battery_usage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large_margin"
        android:text="@string/app_battery_usage"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/service_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintEnd_toStartOf="@+id/g2"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/txt_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large_margin"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/service_switch"
        app:layout_constraintEnd_toStartOf="@+id/service_switch"
        app:layout_constraintTop_toTopOf="@+id/service_switch"
        tools:text="@string/service_is_off" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/low_battery_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/service_switch"
        app:layout_constraintStart_toStartOf="@+id/service_switch"
        app:layout_constraintTop_toBottomOf="@+id/service_switch" />

    <TextView
        android:id="@+id/txt_low_battery_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large_margin"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/low_battery_switch"
        app:layout_constraintEnd_toStartOf="@+id/low_battery_switch"
        app:layout_constraintTop_toBottomOf="@+id/service_switch"
        android:text="@string/low_battery_alarm_is_off" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/low_battery_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/large_margin"
        app:layout_constraintEnd_toEndOf="@+id/low_battery_switch"
        app:layout_constraintStart_toStartOf="@+id/g3"
        app:layout_constraintTop_toBottomOf="@+id/low_battery_switch">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_active_on"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/large_margin"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toStartOf="@+id/low_battery_num_txt"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/low_battery_num_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/large_margin"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="0 %" />

        <SeekBar
            android:id="@+id/low_battery_seekBar"
            android:layout_width="0dp"
            android:max="100"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/powered_by"
        android:textColor="@color/alpha_info_text_color"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

</androidx.constraintlayout.widget.ConstraintLayout>