<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_500">

        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="@dimen/large_margin"
            android:src="@drawable/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/base_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:cpb_background_progressbar_color="#b6bbd8"
            app:cpb_background_progressbar_width="5dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="@color/green"
            app:cpb_progressbar_width="10dp"
            app:cpb_round_border="false"
            app:layout_constraintBottom_toTopOf="@+id/chart_g4"
            app:layout_constraintEnd_toStartOf="@+id/chart_g2"
            app:layout_constraintStart_toStartOf="@+id/chart_g1"
            app:layout_constraintTop_toTopOf="@+id/chart_g3" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/energy"
            app:layout_constraintBottom_toTopOf="@+id/chart_g5"
            app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
            app:layout_constraintStart_toStartOf="@+id/circularProgressBar" />

        <TextView
            android:id="@+id/txt_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/extra_large_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
            app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:text="30 %" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/base_guideline">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title"
                android:textColor="@color/info_title_color"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/g1"
                app:layout_constraintEnd_toStartOf="@+id/g5"
                app:layout_constraintStart_toStartOf="@+id/g6"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/voltage"
                app:layout_constraintBottom_toTopOf="@+id/g2"
                app:layout_constraintStart_toStartOf="@+id/g6"
                app:layout_constraintTop_toTopOf="@+id/g1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:text="@string/voltage"
                android:textColor="@color/alpha_info_text_color"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/txt_voltage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/cpu"
                app:layout_constraintBottom_toTopOf="@+id/g2"
                app:layout_constraintStart_toStartOf="@+id/g4"
                app:layout_constraintTop_toTopOf="@+id/g1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:text="@string/technology"
                android:textColor="@color/alpha_info_text_color"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toEndOf="@+id/img2"
                app:layout_constraintTop_toTopOf="@+id/img2" />

            <TextView
                android:id="@+id/txt_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img2"
                app:layout_constraintStart_toEndOf="@+id/img2" />

            <ImageView
                android:id="@+id/img3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/plug"
                app:layout_constraintBottom_toTopOf="@+id/g3"
                app:layout_constraintStart_toStartOf="@+id/g6"
                app:layout_constraintTop_toTopOf="@+id/g2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:text="@string/plug_state"
                android:textColor="@color/alpha_info_text_color"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toEndOf="@+id/img3"
                app:layout_constraintTop_toTopOf="@+id/img3" />

            <TextView
                android:id="@+id/txt_plug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img3"
                app:layout_constraintStart_toEndOf="@+id/img3" />

            <ImageView
                android:id="@+id/img4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/thermometer"
                app:layout_constraintBottom_toTopOf="@+id/g3"
                app:layout_constraintStart_toStartOf="@+id/g4"
                app:layout_constraintTop_toTopOf="@+id/g2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:text="@string/temperature"
                android:textColor="@color/alpha_info_text_color"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toEndOf="@+id/img4"
                app:layout_constraintTop_toTopOf="@+id/img4" />

            <TextView
                android:id="@+id/txt_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img4"
                app:layout_constraintStart_toEndOf="@+id/img4" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:orientation="vertical"
                android:background="@color/line_color"
                app:layout_constraintBottom_toTopOf="@+id/g1"
                app:layout_constraintEnd_toStartOf="@+id/g5"
                app:layout_constraintStart_toStartOf="@+id/g6" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/large_margin"
                android:background="@color/line_color"
                app:layout_constraintBottom_toTopOf="@+id/g2"
                app:layout_constraintEnd_toStartOf="@+id/g4"
                app:layout_constraintStart_toStartOf="@+id/g6" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/large_margin"
                android:background="@color/line_color"
                app:layout_constraintBottom_toTopOf="@+id/g2"
                app:layout_constraintEnd_toStartOf="@+id/g5"
                app:layout_constraintStart_toStartOf="@+id/g4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.50" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.75" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/large_margin"
                android:background="@drawable/bg_health"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/g3">

                <ImageView
                    android:id="@+id/img_health"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/cpu"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txt_health"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large_margin"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_health"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/img_health"
                    app:layout_constraintTop_toTopOf="@+id/img_health"
                    tools:text="test" />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/chart_g1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/chart_g2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/chart_g3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/chart_g4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/chart_g5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.22" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_menu"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:clickable="true"
        android:fitsSystemWindows="true"
        android:focusable="true">

        <include
            android:id="@+id/inc_drawer"
            layout="@layout/drawer_layout" />

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>